tools/fluid_parser/y.output
Terminals which are not used

   ANYTHING


Grammar

    0 $accept: start $end

    1 start: COMMENT VERSION HEADER_NAME CODE_NAME function

    2 @1: /* empty */

    3 @2: /* empty */

    4 @3: /* empty */

    5 function: FUNCTION LCUR @1 IDENTIFIER @2 LBRA RBRA @3 RCUR LCUR attriblist RCUR LCUR blocklist RCUR

    6 @4: /* empty */

    7 blocklist: block @4 blocklist
    8          | block

    9 block: CODE LCUR non_curly RCUR LCUR attriblist RCUR

   10 @5: /* empty */

   11 @6: /* empty */

   12 @7: /* empty */

   13 block: @5 widget @6 name_or_empty @7 LCUR attriblist RCUR subwidgetlist

   14 @8: /* empty */

   15 @9: /* empty */

   16 @10: /* empty */

   17 block: @8 FL_GROUP @9 name_or_empty @10 LCUR attriblist RCUR subwidgetlist

   18 number: FLOATR
   19       | INTEGER

   20 subwidgetlist: LCUR RCUR
   21              | LCUR blocklist RCUR
   22              | /* empty */

   23 widget: FL_WINDOW
   24       | FL_BUTTON
   25       | FL_INPUT
   26       | FL_VALUE_INPUT
   27       | FL_BROWSER
   28       | FL_CHECK_BUTTON
   29       | FL_TEXT_DISPLAY
   30       | FL_OUTPUT
   31       | IDENTIFIER

   32 attriblist: attrib attriblist
   33           | /* empty */

   34 attrib: OPEN
   35       | SELECTED
   36       | xywh
   37       | type
   38       | visible
   39       | label
   40       | callbackf
   41       | maximum
   42       | minimum
   43       | step
   44       | value
   45       | box
   46       | down_box
   47       | labelsize
   48       | textsize
   49       | align
   50       | when
   51       | resizable
   52       | size_range
   53       | textfont
   54       | tooltip
   55       | code0
   56       | color
   57       | labelcolor
   58       | labeltype
   59       | textcolor
   60       | selection_color
   61       | labelfont
   62       | IDENTIFIER

   63 name_or_empty: IDENTIFIER
   64              | LCUR RCUR

   65 name_or_empty_two: IDENTIFIER
   66                  | LCUR RCUR

   67 name_or_empty_three: non_curly RCUR

   68 @11: /* empty */

   69 @12: /* empty */

   70 type: TYPE LCUR IDENTIFIER @11 IDENTIFIER @12 RCUR
   71     | TYPE IDENTIFIER

   72 @13: /* empty */

   73 label: LABEL @13 name_or_empty_three

   74 @14: /* empty */

   75 tooltip: TOOLTIP @14 name_or_empty_three

   76 @15: /* empty */

   77 callbackf: CALLBACKF @15 name_or_empty_two

   78 @16: /* empty */

   79 @17: /* empty */

   80 @18: /* empty */

   81 @19: /* empty */

   82 xywh: XYWH LCUR INTEGER @16 INTEGER @17 INTEGER @18 INTEGER @19 RCUR

   83 minimum: MINIMUM number

   84 maximum: MAXIMUM number

   85 step: STEP number

   86 value: VALUE number

   87 textsize: TEXTSIZE INTEGER

   88 labelsize: LABELSIZE INTEGER

   89 align: ALIGN INTEGER

   90 visible: VISIBLE

   91 when: WHEN INTEGER

   92 resizable: RESIZABLE

   93 @20: /* empty */

   94 @21: /* empty */

   95 @22: /* empty */

   96 @23: /* empty */

   97 size_range: SIZE_RANGE LCUR INTEGER @20 INTEGER @21 INTEGER @22 INTEGER @23 RCUR

   98 textfont: TEXTFONT INTEGER

   99 labelfont: LABELFONT INTEGER

  100 code0: CODE0 name_or_empty_three

  101 color: COLOR INTEGER

  102 labelcolor: LABELCOLOR INTEGER

  103 selection_color: SELECTION_COLOR INTEGER

  104 textcolor: TEXTCOLOR INTEGER

  105 non_curly: NON_CURLY
  106          | NON_CURLY non_curly

  107 down_box: DOWN_BOX IDENTIFIER

  108 box: BOX IDENTIFIER

  109 labeltype: LABELTYPE IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
COMMENT (258) 1
VERSION (259) 1
HEADER_NAME (260) 1
CODE_NAME (261) 1
FUNCTION (262) 5
IDENTIFIER (263) 5 31 62 63 65 70 71 107 108 109
LBRA (264) 5
RBRA (265) 5
RCUR (266) 5 9 13 17 20 21 64 66 67 70 82 97
LCUR (267) 5 9 13 17 20 21 64 66 70 82 97
OPEN (268) 34
CODE (269) 9
SELECTED (270) 35
ANYTHING (271)
NON_CURLY (272) 105 106
INTEGER (273) 19 82 87 88 89 91 97 98 99 101 102 103 104
TYPE (274) 70 71
VISIBLE (275) 90
XYWH (276) 82
LABEL (277) 73
CALLBACKF (278) 77
LABELSIZE (279) 88
TEXTSIZE (280) 87
ALIGN (281) 89
FLOATR (282) 18
MAXIMUM (283) 84
MINIMUM (284) 83
STEP (285) 85
VALUE (286) 86
BOX (287) 108
DOWN_BOX (288) 107
WHEN (289) 91
RESIZABLE (290) 92
SIZE_RANGE (291) 97
TEXTFONT (292) 98
TOOLTIP (293) 75
CODE0 (294) 100
COLOR (295) 101
LABELCOLOR (296) 102
LABELTYPE (297) 109
SELECTION_COLOR (298) 103
TEXTCOLOR (299) 104
LABELFONT (300) 99
FL_WINDOW (301) 23
FL_BUTTON (302) 24
FL_INPUT (303) 25
FL_VALUE_INPUT (304) 26
FL_BROWSER (305) 27
FL_CHECK_BUTTON (306) 28
FL_TEXT_DISPLAY (307) 29
FL_OUTPUT (308) 30
FL_GROUP (309) 17


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
start (56)
    on left: 1, on right: 0
function (57)
    on left: 5, on right: 1
@1 (58)
    on left: 2, on right: 5
@2 (59)
    on left: 3, on right: 5
@3 (60)
    on left: 4, on right: 5
blocklist (61)
    on left: 7 8, on right: 5 7 21
@4 (62)
    on left: 6, on right: 7
block (63)
    on left: 9 13 17, on right: 7 8
@5 (64)
    on left: 10, on right: 13
@6 (65)
    on left: 11, on right: 13
@7 (66)
    on left: 12, on right: 13
@8 (67)
    on left: 14, on right: 17
@9 (68)
    on left: 15, on right: 17
@10 (69)
    on left: 16, on right: 17
number (70)
    on left: 18 19, on right: 83 84 85 86
subwidgetlist (71)
    on left: 20 21 22, on right: 13 17
widget (72)
    on left: 23 24 25 26 27 28 29 30 31, on right: 13
attriblist (73)
    on left: 32 33, on right: 5 9 13 17 32
attrib (74)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
    52 53 54 55 56 57 58 59 60 61 62, on right: 32
name_or_empty (75)
    on left: 63 64, on right: 13 17
name_or_empty_two (76)
    on left: 65 66, on right: 77
name_or_empty_three (77)
    on left: 67, on right: 73 75 100
type (78)
    on left: 70 71, on right: 37
@11 (79)
    on left: 68, on right: 70
@12 (80)
    on left: 69, on right: 70
label (81)
    on left: 73, on right: 39
@13 (82)
    on left: 72, on right: 73
tooltip (83)
    on left: 75, on right: 54
@14 (84)
    on left: 74, on right: 75
callbackf (85)
    on left: 77, on right: 40
@15 (86)
    on left: 76, on right: 77
xywh (87)
    on left: 82, on right: 36
@16 (88)
    on left: 78, on right: 82
@17 (89)
    on left: 79, on right: 82
@18 (90)
    on left: 80, on right: 82
@19 (91)
    on left: 81, on right: 82
minimum (92)
    on left: 83, on right: 42
maximum (93)
    on left: 84, on right: 41
step (94)
    on left: 85, on right: 43
value (95)
    on left: 86, on right: 44
textsize (96)
    on left: 87, on right: 48
labelsize (97)
    on left: 88, on right: 47
align (98)
    on left: 89, on right: 49
visible (99)
    on left: 90, on right: 38
when (100)
    on left: 91, on right: 50
resizable (101)
    on left: 92, on right: 51
size_range (102)
    on left: 97, on right: 52
@20 (103)
    on left: 93, on right: 97
@21 (104)
    on left: 94, on right: 97
@22 (105)
    on left: 95, on right: 97
@23 (106)
    on left: 96, on right: 97
textfont (107)
    on left: 98, on right: 53
labelfont (108)
    on left: 99, on right: 61
code0 (109)
    on left: 100, on right: 55
color (110)
    on left: 101, on right: 56
labelcolor (111)
    on left: 102, on right: 57
selection_color (112)
    on left: 103, on right: 60
textcolor (113)
    on left: 104, on right: 59
non_curly (114)
    on left: 105 106, on right: 9 67 106
down_box (115)
    on left: 107, on right: 46
box (116)
    on left: 108, on right: 45
labeltype (117)
    on left: 109, on right: 58


state 0

    0 $accept: . start $end

    COMMENT  shift, and go to state 1

    start  go to state 2


state 1

    1 start: COMMENT . VERSION HEADER_NAME CODE_NAME function

    VERSION  shift, and go to state 3


state 2

    0 $accept: start . $end

    $end  shift, and go to state 4


state 3

    1 start: COMMENT VERSION . HEADER_NAME CODE_NAME function

    HEADER_NAME  shift, and go to state 5


state 4

    0 $accept: start $end .

    $default  accept


state 5

    1 start: COMMENT VERSION HEADER_NAME . CODE_NAME function

    CODE_NAME  shift, and go to state 6


state 6

    1 start: COMMENT VERSION HEADER_NAME CODE_NAME . function

    FUNCTION  shift, and go to state 7

    function  go to state 8


state 7

    5 function: FUNCTION . LCUR @1 IDENTIFIER @2 LBRA RBRA @3 RCUR LCUR attriblist RCUR LCUR blocklist RCUR

    LCUR  shift, and go to state 9


state 8

    1 start: COMMENT VERSION HEADER_NAME CODE_NAME function .

    $default  reduce using rule 1 (start)


state 9

    5 function: FUNCTION LCUR . @1 IDENTIFIER @2 LBRA RBRA @3 RCUR LCUR attriblist RCUR LCUR blocklist RCUR

    $default  reduce using rule 2 (@1)

    @1  go to state 10


state 10

    5 function: FUNCTION LCUR @1 . IDENTIFIER @2 LBRA RBRA @3 RCUR LCUR attriblist RCUR LCUR blocklist RCUR

    IDENTIFIER  shift, and go to state 11


state 11

    5 function: FUNCTION LCUR @1 IDENTIFIER . @2 LBRA RBRA @3 RCUR LCUR attriblist RCUR LCUR blocklist RCUR

    $default  reduce using rule 3 (@2)

    @2  go to state 12


state 12

    5 function: FUNCTION LCUR @1 IDENTIFIER @2 . LBRA RBRA @3 RCUR LCUR attriblist RCUR LCUR blocklist RCUR

    LBRA  shift, and go to state 13


state 13

    5 function: FUNCTION LCUR @1 IDENTIFIER @2 LBRA . RBRA @3 RCUR LCUR attriblist RCUR LCUR blocklist RCUR

    RBRA  shift, and go to state 14


state 14

    5 function: FUNCTION LCUR @1 IDENTIFIER @2 LBRA RBRA . @3 RCUR LCUR attriblist RCUR LCUR blocklist RCUR

    $default  reduce using rule 4 (@3)

    @3  go to state 15


state 15

    5 function: FUNCTION LCUR @1 IDENTIFIER @2 LBRA RBRA @3 . RCUR LCUR attriblist RCUR LCUR blocklist RCUR

    RCUR  shift, and go to state 16


state 16

    5 function: FUNCTION LCUR @1 IDENTIFIER @2 LBRA RBRA @3 RCUR . LCUR attriblist RCUR LCUR blocklist RCUR

    LCUR  shift, and go to state 17


state 17

    5 function: FUNCTION LCUR @1 IDENTIFIER @2 LBRA RBRA @3 RCUR LCUR . attriblist RCUR LCUR blocklist RCUR

    IDENTIFIER       shift, and go to state 18
    OPEN             shift, and go to state 19
    SELECTED         shift, and go to state 20
    TYPE             shift, and go to state 21
    VISIBLE          shift, and go to state 22
    XYWH             shift, and go to state 23
    LABEL            shift, and go to state 24
    CALLBACKF        shift, and go to state 25
    LABELSIZE        shift, and go to state 26
    TEXTSIZE         shift, and go to state 27
    ALIGN            shift, and go to state 28
    MAXIMUM          shift, and go to state 29
    MINIMUM          shift, and go to state 30
    STEP             shift, and go to state 31
    VALUE            shift, and go to state 32
    BOX              shift, and go to state 33
    DOWN_BOX         shift, and go to state 34
    WHEN             shift, and go to state 35
    RESIZABLE        shift, and go to state 36
    SIZE_RANGE       shift, and go to state 37
    TEXTFONT         shift, and go to state 38
    TOOLTIP          shift, and go to state 39
    CODE0            shift, and go to state 40
    COLOR            shift, and go to state 41
    LABELCOLOR       shift, and go to state 42
    LABELTYPE        shift, and go to state 43
    SELECTION_COLOR  shift, and go to state 44
    TEXTCOLOR        shift, and go to state 45
    LABELFONT        shift, and go to state 46

    $default  reduce using rule 33 (attriblist)

    attriblist       go to state 47
    attrib           go to state 48
    type             go to state 49
    label            go to state 50
    tooltip          go to state 51
    callbackf        go to state 52
    xywh             go to state 53
    minimum          go to state 54
    maximum          go to state 55
    step             go to state 56
    value            go to state 57
    textsize         go to state 58
    labelsize        go to state 59
    align            go to state 60
    visible          go to state 61
    when             go to state 62
    resizable        go to state 63
    size_range       go to state 64
    textfont         go to state 65
    labelfont        go to state 66
    code0            go to state 67
    color            go to state 68
    labelcolor       go to state 69
    selection_color  go to state 70
    textcolor        go to state 71
    down_box         go to state 72
    box              go to state 73
    labeltype        go to state 74


state 18

   62 attrib: IDENTIFIER .

    $default  reduce using rule 62 (attrib)


state 19

   34 attrib: OPEN .

    $default  reduce using rule 34 (attrib)


state 20

   35 attrib: SELECTED .

    $default  reduce using rule 35 (attrib)


state 21

   70 type: TYPE . LCUR IDENTIFIER @11 IDENTIFIER @12 RCUR
   71     | TYPE . IDENTIFIER

    IDENTIFIER  shift, and go to state 75
    LCUR        shift, and go to state 76


state 22

   90 visible: VISIBLE .

    $default  reduce using rule 90 (visible)


state 23

   82 xywh: XYWH . LCUR INTEGER @16 INTEGER @17 INTEGER @18 INTEGER @19 RCUR

    LCUR  shift, and go to state 77


state 24

   73 label: LABEL . @13 name_or_empty_three

    $default  reduce using rule 72 (@13)

    @13  go to state 78


state 25

   77 callbackf: CALLBACKF . @15 name_or_empty_two

    $default  reduce using rule 76 (@15)

    @15  go to state 79


state 26

   88 labelsize: LABELSIZE . INTEGER

    INTEGER  shift, and go to state 80


state 27

   87 textsize: TEXTSIZE . INTEGER

    INTEGER  shift, and go to state 81


state 28

   89 align: ALIGN . INTEGER

    INTEGER  shift, and go to state 82


state 29

   84 maximum: MAXIMUM . number

    INTEGER  shift, and go to state 83
    FLOATR   shift, and go to state 84

    number  go to state 85


state 30

   83 minimum: MINIMUM . number

    INTEGER  shift, and go to state 83
    FLOATR   shift, and go to state 84

    number  go to state 86


state 31

   85 step: STEP . number

    INTEGER  shift, and go to state 83
    FLOATR   shift, and go to state 84

    number  go to state 87


state 32

   86 value: VALUE . number

    INTEGER  shift, and go to state 83
    FLOATR   shift, and go to state 84

    number  go to state 88


state 33

  108 box: BOX . IDENTIFIER

    IDENTIFIER  shift, and go to state 89


state 34

  107 down_box: DOWN_BOX . IDENTIFIER

    IDENTIFIER  shift, and go to state 90


state 35

   91 when: WHEN . INTEGER

    INTEGER  shift, and go to state 91


state 36

   92 resizable: RESIZABLE .

    $default  reduce using rule 92 (resizable)


state 37

   97 size_range: SIZE_RANGE . LCUR INTEGER @20 INTEGER @21 INTEGER @22 INTEGER @23 RCUR

    LCUR  shift, and go to state 92


state 38

   98 textfont: TEXTFONT . INTEGER

    INTEGER  shift, and go to state 93


state 39

   75 tooltip: TOOLTIP . @14 name_or_empty_three

    $default  reduce using rule 74 (@14)

    @14  go to state 94


state 40

  100 code0: CODE0 . name_or_empty_three

    NON_CURLY  shift, and go to state 95

    name_or_empty_three  go to state 96
    non_curly            go to state 97


state 41

  101 color: COLOR . INTEGER

    INTEGER  shift, and go to state 98


state 42

  102 labelcolor: LABELCOLOR . INTEGER

    INTEGER  shift, and go to state 99


state 43

  109 labeltype: LABELTYPE . IDENTIFIER

    IDENTIFIER  shift, and go to state 100


state 44

  103 selection_color: SELECTION_COLOR . INTEGER

    INTEGER  shift, and go to state 101


state 45

  104 textcolor: TEXTCOLOR . INTEGER

    INTEGER  shift, and go to state 102


state 46

   99 labelfont: LABELFONT . INTEGER

    INTEGER  shift, and go to state 103


state 47

    5 function: FUNCTION LCUR @1 IDENTIFIER @2 LBRA RBRA @3 RCUR LCUR attriblist . RCUR LCUR blocklist RCUR

    RCUR  shift, and go to state 104


state 48

   32 attriblist: attrib . attriblist

    IDENTIFIER       shift, and go to state 18
    OPEN             shift, and go to state 19
    SELECTED         shift, and go to state 20
    TYPE             shift, and go to state 21
    VISIBLE          shift, and go to state 22
    XYWH             shift, and go to state 23
    LABEL            shift, and go to state 24
    CALLBACKF        shift, and go to state 25
    LABELSIZE        shift, and go to state 26
    TEXTSIZE         shift, and go to state 27
    ALIGN            shift, and go to state 28
    MAXIMUM          shift, and go to state 29
    MINIMUM          shift, and go to state 30
    STEP             shift, and go to state 31
    VALUE            shift, and go to state 32
    BOX              shift, and go to state 33
    DOWN_BOX         shift, and go to state 34
    WHEN             shift, and go to state 35
    RESIZABLE        shift, and go to state 36
    SIZE_RANGE       shift, and go to state 37
    TEXTFONT         shift, and go to state 38
    TOOLTIP          shift, and go to state 39
    CODE0            shift, and go to state 40
    COLOR            shift, and go to state 41
    LABELCOLOR       shift, and go to state 42
    LABELTYPE        shift, and go to state 43
    SELECTION_COLOR  shift, and go to state 44
    TEXTCOLOR        shift, and go to state 45
    LABELFONT        shift, and go to state 46

    $default  reduce using rule 33 (attriblist)

    attriblist       go to state 105
    attrib           go to state 48
    type             go to state 49
    label            go to state 50
    tooltip          go to state 51
    callbackf        go to state 52
    xywh             go to state 53
    minimum          go to state 54
    maximum          go to state 55
    step             go to state 56
    value            go to state 57
    textsize         go to state 58
    labelsize        go to state 59
    align            go to state 60
    visible          go to state 61
    when             go to state 62
    resizable        go to state 63
    size_range       go to state 64
    textfont         go to state 65
    labelfont        go to state 66
    code0            go to state 67
    color            go to state 68
    labelcolor       go to state 69
    selection_color  go to state 70
    textcolor        go to state 71
    down_box         go to state 72
    box              go to state 73
    labeltype        go to state 74


state 49

   37 attrib: type .

    $default  reduce using rule 37 (attrib)


state 50

   39 attrib: label .

    $default  reduce using rule 39 (attrib)


state 51

   54 attrib: tooltip .

    $default  reduce using rule 54 (attrib)


state 52

   40 attrib: callbackf .

    $default  reduce using rule 40 (attrib)


state 53

   36 attrib: xywh .

    $default  reduce using rule 36 (attrib)


state 54

   42 attrib: minimum .

    $default  reduce using rule 42 (attrib)


state 55

   41 attrib: maximum .

    $default  reduce using rule 41 (attrib)


state 56

   43 attrib: step .

    $default  reduce using rule 43 (attrib)


state 57

   44 attrib: value .

    $default  reduce using rule 44 (attrib)


state 58

   48 attrib: textsize .

    $default  reduce using rule 48 (attrib)


state 59

   47 attrib: labelsize .

    $default  reduce using rule 47 (attrib)


state 60

   49 attrib: align .

    $default  reduce using rule 49 (attrib)


state 61

   38 attrib: visible .

    $default  reduce using rule 38 (attrib)


state 62

   50 attrib: when .

    $default  reduce using rule 50 (attrib)


state 63

   51 attrib: resizable .

    $default  reduce using rule 51 (attrib)


state 64

   52 attrib: size_range .

    $default  reduce using rule 52 (attrib)


state 65

   53 attrib: textfont .

    $default  reduce using rule 53 (attrib)


state 66

   61 attrib: labelfont .

    $default  reduce using rule 61 (attrib)


state 67

   55 attrib: code0 .

    $default  reduce using rule 55 (attrib)


state 68

   56 attrib: color .

    $default  reduce using rule 56 (attrib)


state 69

   57 attrib: labelcolor .

    $default  reduce using rule 57 (attrib)


state 70

   60 attrib: selection_color .

    $default  reduce using rule 60 (attrib)


state 71

   59 attrib: textcolor .

    $default  reduce using rule 59 (attrib)


state 72

   46 attrib: down_box .

    $default  reduce using rule 46 (attrib)


state 73

   45 attrib: box .

    $default  reduce using rule 45 (attrib)


state 74

   58 attrib: labeltype .

    $default  reduce using rule 58 (attrib)


state 75

   71 type: TYPE IDENTIFIER .

    $default  reduce using rule 71 (type)


state 76

   70 type: TYPE LCUR . IDENTIFIER @11 IDENTIFIER @12 RCUR

    IDENTIFIER  shift, and go to state 106


state 77

   82 xywh: XYWH LCUR . INTEGER @16 INTEGER @17 INTEGER @18 INTEGER @19 RCUR

    INTEGER  shift, and go to state 107


state 78

   73 label: LABEL @13 . name_or_empty_three

    NON_CURLY  shift, and go to state 95

    name_or_empty_three  go to state 108
    non_curly            go to state 97


state 79

   77 callbackf: CALLBACKF @15 . name_or_empty_two

    IDENTIFIER  shift, and go to state 109
    LCUR        shift, and go to state 110

    name_or_empty_two  go to state 111


state 80

   88 labelsize: LABELSIZE INTEGER .

    $default  reduce using rule 88 (labelsize)


state 81

   87 textsize: TEXTSIZE INTEGER .

    $default  reduce using rule 87 (textsize)


state 82

   89 align: ALIGN INTEGER .

    $default  reduce using rule 89 (align)


state 83

   19 number: INTEGER .

    $default  reduce using rule 19 (number)


state 84

   18 number: FLOATR .

    $default  reduce using rule 18 (number)


state 85

   84 maximum: MAXIMUM number .

    $default  reduce using rule 84 (maximum)


state 86

   83 minimum: MINIMUM number .

    $default  reduce using rule 83 (minimum)


state 87

   85 step: STEP number .

    $default  reduce using rule 85 (step)


state 88

   86 value: VALUE number .

    $default  reduce using rule 86 (value)


state 89

  108 box: BOX IDENTIFIER .

    $default  reduce using rule 108 (box)


state 90

  107 down_box: DOWN_BOX IDENTIFIER .

    $default  reduce using rule 107 (down_box)


state 91

   91 when: WHEN INTEGER .

    $default  reduce using rule 91 (when)


state 92

   97 size_range: SIZE_RANGE LCUR . INTEGER @20 INTEGER @21 INTEGER @22 INTEGER @23 RCUR

    INTEGER  shift, and go to state 112


state 93

   98 textfont: TEXTFONT INTEGER .

    $default  reduce using rule 98 (textfont)


state 94

   75 tooltip: TOOLTIP @14 . name_or_empty_three

    NON_CURLY  shift, and go to state 95

    name_or_empty_three  go to state 113
    non_curly            go to state 97


state 95

  105 non_curly: NON_CURLY .
  106          | NON_CURLY . non_curly

    NON_CURLY  shift, and go to state 95

    $default  reduce using rule 105 (non_curly)

    non_curly  go to state 114


state 96

  100 code0: CODE0 name_or_empty_three .

    $default  reduce using rule 100 (code0)


state 97

   67 name_or_empty_three: non_curly . RCUR

    RCUR  shift, and go to state 115


state 98

  101 color: COLOR INTEGER .

    $default  reduce using rule 101 (color)


state 99

  102 labelcolor: LABELCOLOR INTEGER .

    $default  reduce using rule 102 (labelcolor)


state 100

  109 labeltype: LABELTYPE IDENTIFIER .

    $default  reduce using rule 109 (labeltype)


state 101

  103 selection_color: SELECTION_COLOR INTEGER .

    $default  reduce using rule 103 (selection_color)


state 102

  104 textcolor: TEXTCOLOR INTEGER .

    $default  reduce using rule 104 (textcolor)


state 103

   99 labelfont: LABELFONT INTEGER .

    $default  reduce using rule 99 (labelfont)


state 104

    5 function: FUNCTION LCUR @1 IDENTIFIER @2 LBRA RBRA @3 RCUR LCUR attriblist RCUR . LCUR blocklist RCUR

    LCUR  shift, and go to state 116


state 105

   32 attriblist: attrib attriblist .

    $default  reduce using rule 32 (attriblist)


state 106

   70 type: TYPE LCUR IDENTIFIER . @11 IDENTIFIER @12 RCUR

    $default  reduce using rule 68 (@11)

    @11  go to state 117


state 107

   82 xywh: XYWH LCUR INTEGER . @16 INTEGER @17 INTEGER @18 INTEGER @19 RCUR

    $default  reduce using rule 78 (@16)

    @16  go to state 118


state 108

   73 label: LABEL @13 name_or_empty_three .

    $default  reduce using rule 73 (label)


state 109

   65 name_or_empty_two: IDENTIFIER .

    $default  reduce using rule 65 (name_or_empty_two)


state 110

   66 name_or_empty_two: LCUR . RCUR

    RCUR  shift, and go to state 119


state 111

   77 callbackf: CALLBACKF @15 name_or_empty_two .

    $default  reduce using rule 77 (callbackf)


state 112

   97 size_range: SIZE_RANGE LCUR INTEGER . @20 INTEGER @21 INTEGER @22 INTEGER @23 RCUR
